Добавил классы кнопок телеграмм. Наследовал с API и добавил дополнительные функции.

--- a/src/MyBOT/MyBOT.csproj
+++ b/src/MyBOT/MyBOT.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\BotClients\TelegramBotClient\TelebotClient.csproj" />
     <ProjectReference Include="..\Infrastructure\BotClients\ViberbotClient\ViberbotClient.csproj" />
+    <ProjectReference Include="..\Infrastructure\Keyboard\Keyboard.csproj" />
   </ItemGroup>
 
 </Project>
