--- a/src/Infrastructure/DB/Domain/Domain.csproj
+++ b/src/Infrastructure/DB/Domain/Domain.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>DbDomain</AssemblyName>
+    <RootNamespace>DB.Domain</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,9 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
-    <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
 </Project>
