--- a/src/Infrastructure/BotClients/TelegramBotClient/TelebotClient.csproj
+++ b/src/Infrastructure/BotClients/TelegramBotClient/TelebotClient.csproj
@@ -15,7 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
-    <PackageReference Include="Telegram.Bot" Version="15.7.1" />
+    <PackageReference Include="Telegram.Bot" Version="17.0.0-alpha.1" />
   </ItemGroup>
 
 </Project>
