--- a/src/Infrastructure/Keyboard/Keyboard.csproj
+++ b/src/Infrastructure/Keyboard/Keyboard.csproj
@@ -14,7 +14,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
-    <PackageReference Include="Telegram.Bot" Version="15.7.1" />
+    <PackageReference Include="Telegram.Bot" Version="17.0.0-alpha.1" />
   </ItemGroup>
 
 </Project>
