--- a/src/Infrastructure/Activities/Activities.csproj
+++ b/src/Infrastructure/Activities/Activities.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Keyboard</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
     <PackageReference Include="Telegram.Bot" Version="17.0.0-alpha.1" />
+    <PackageReference Include="Viber.Bot" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
