--- a/src/Infrastructure/DB/Entities/Entities.csproj
+++ b/src/Infrastructure/DB/Entities/Entities.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Keyboard\Keyboard.csproj" />
+    <ProjectReference Include="..\..\Activities\Activities.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
