--- a/src/MyBOT/MyBOT.csproj
+++ b/src/MyBOT/MyBOT.csproj
@@ -23,7 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\BotClients\TelegramBotClient\TelebotClient.csproj" />
     <ProjectReference Include="..\Infrastructure\BotClients\ViberbotClient\ViberbotClient.csproj" />
-    <ProjectReference Include="..\Infrastructure\Keyboard\Keyboard.csproj" />
+    <ProjectReference Include="..\Infrastructure\Activities\Activities.csproj" />
   </ItemGroup>
 
 </Project>
